unpackaged/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Capstone Module</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Change of Major</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Concurrent Degree Programme</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>General Enquiry</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>IRR Module</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Intergroup Dialogue Interest</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Leadership</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Leadership Certificate Sign-up</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Leadership Ethics Application</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Leadership Fundamentals Application</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Letter of Enrolment</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Letter of Residence</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>NGO Bootcamp Application</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>NS Deferment Letter</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>REC Form</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Request for Transcripts</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Scholarship</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Student Module</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Student Overloading Module</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Summer Independent Research</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Summer Research</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Summer Science Research</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Summer Social Science Research</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Vice Rector Note</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Academic_Performance__c</fullName>
        <label>Academic Performance</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Supervisor</fullName>
                </value>
                <value>
                    <fullName>Supervisor Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending Head of Study</fullName>
                </value>
                <value>
                    <fullName>Head of Study Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending Ethics Committee</fullName>
                </value>
                <value>
                    <fullName>Ethics Committee Approved</fullName>
                </value>
                <value>
                    <fullName>Ethics Committee Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending VR</fullName>
                </value>
                <value>
                    <fullName>VR Approved</fullName>
                </value>
                <value>
                    <fullName>VR Rejected</fullName>
                </value>
                <value>
                    <fullName>Head of Study Approved</fullName>
                    <isActive>false</isActive>
                    <label>Head of Study Approved</label>
                </value>
                <value>
                    <fullName>Supervisor Approved</fullName>
                    <isActive>false</isActive>
                    <label>Supervisor Approved</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Capstone_Approval_Status__c</fullName>
        <label>(Not in Use) Capstone Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>First Level Approval</fullName>
                </value>
                <value>
                    <fullName>Second Level Approval</fullName>
                </value>
                <value>
                    <fullName>Final Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Capstone_Project_Description__c</fullName>
        <label>(Not in Use)Capstone Project Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Capstone_Project_Supervision__c</fullName>
        <label>(Not Used) Capstone Project Supervision</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Capstone_Project_Title__c</fullName>
        <label>(Not Used) Capstone Project Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Student Services</fullName>
                </value>
                <value>
                    <fullName>Vice Rectors</fullName>
                </value>
                <value>
                    <fullName>Dean of Students</fullName>
                </value>
                <value>
                    <fullName>Registry</fullName>
                </value>
                <value>
                    <fullName>Office of Financial Aid</fullName>
                </value>
                <value>
                    <fullName>Centre for International and Professional Experience</fullName>
                </value>
                <value>
                    <fullName>Residential College Offices</fullName>
                </value>
                <value>
                    <fullName>Research Ethics Committee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Faculty_Advisor__c</fullName>
        <label>Faculty Advisor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardcopy_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hardcopy Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level_1_Approver_Comments__c</fullName>
        <label>(Not Used) Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Level_1_Approver_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Level_1_Approver_Status__c</fullName>
        <description>(Capstone Module) not in use</description>
        <label>(Not in Use) Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_1_Approver__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_2_Approver_Comments__c</fullName>
        <label>(Not Used) Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Level_2_Approver_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Level_2_Approver_Status__c</fullName>
        <description>(Not in Use) Capstone Module</description>
        <label>(Not in Use) Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_2_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Type__c</field>
                <operation>equals</operation>
                <value>Supervisor</value>
            </filterItems>
            <filterItems>
                <field>Contact.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Name)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_Datetime_1st_Level_Approved__c</fullName>
        <label>Max Datetime 1st Level Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Max_Datetime_2nd_Level_Approved__c</fullName>
        <label>Max Datetime 2nd Level Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Max_Datetime_3rd_Level_Approved__c</fullName>
        <label>Max Datetime 3rd Level Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Modules_Impacted__c</fullName>
        <label>Modules Impacted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_From_Date__c</fullName>
        <label>NS From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NS_To_Date__c</fullName>
        <label>NS To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Past_Dropped__c</fullName>
        <label>Have You Dropped an Overload in The Past</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Semester__c</fullName>
        <label>Overloaded/Underloaded Previous Semester</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Queue_taking_ownership_datetime__c</fullName>
        <description>This field should be updated with the datetime value when the owner has taken the ownership</description>
        <label>Max Datetime Queue Must Take Ownership</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>REC_Head_of_Study__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Head of Study</label>
        <lookupFilter>
            <active>false</active>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REC_Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor</label>
        <lookupFilter>
            <active>false</active>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sub_Department__c</fullName>
        <label>Sub  Department</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Department__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Student Affairs</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Change Of Major</fullName>
                </value>
                <value>
                    <fullName>New Semester</fullName>
                </value>
                <value>
                    <fullName>Career Services</fullName>
                </value>
                <value>
                    <fullName>Experiential Opportunities</fullName>
                </value>
                <value>
                    <fullName>Fellowships and Graduate School</fullName>
                </value>
                <value>
                    <fullName>Leadership Development</fullName>
                </value>
                <value>
                    <fullName>RC Executives</fullName>
                </value>
                <value>
                    <fullName>Reg</fullName>
                </value>
                <value>
                    <fullName>VR</fullName>
                </value>
                <value>
                    <fullName>REC</fullName>
                </value>
                <value>
                    <fullName>Registry</fullName>
                    <isActive>false</isActive>
                    <label>Registry</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_MC__c</fullName>
        <label>Total MC for semester</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_Of_Enquiry__c</fullName>
        <label>Type of Enquiry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Request for Transcripts</fullName>
                </value>
                <value>
                    <fullName>NS Deferment Letter</fullName>
                </value>
                <value>
                    <fullName>Request for Vice Rector Note</fullName>
                </value>
                <value>
                    <fullName>Summer Language Scholarship</fullName>
                </value>
                <value>
                    <fullName>Summer Academic Scholarship</fullName>
                </value>
                <value>
                    <fullName>Summer Arts Scholarship</fullName>
                </value>
                <value>
                    <fullName>Five Year Programme with Lee Kuan Yew School of Public Policy</fullName>
                </value>
                <value>
                    <fullName>Independent Reading and Research (IRR) Module Registration Form</fullName>
                </value>
                <value>
                    <fullName>Capstone Module Proposal Form</fullName>
                </value>
                <value>
                    <fullName>Request for Student Status Letter (Additional remarks needed)</fullName>
                </value>
                <value>
                    <fullName>Modules Add/Drop</fullName>
                </value>
                <value>
                    <fullName>2MC IRR/ 5MC Special Project</fullName>
                </value>
                <value>
                    <fullName>General Enquiry</fullName>
                </value>
                <value>
                    <fullName>Request for Change of Major/Minor</fullName>
                </value>
                <value>
                    <fullName>Request for Letter of Residence</fullName>
                </value>
                <value>
                    <fullName>Summer Independent Research</fullName>
                </value>
                <value>
                    <fullName>Summer Science Research</fullName>
                </value>
                <value>
                    <fullName>Summer Social Science Research</fullName>
                </value>
                <value>
                    <fullName>Summer Research</fullName>
                </value>
                <value>
                    <fullName>REC Form Submission</fullName>
                </value>
                <value>
                    <fullName>Leadership Ethics Application</fullName>
                </value>
                <value>
                    <fullName>NGO Bootcamp Application</fullName>
                </value>
                <value>
                    <fullName>Leadership Certificate Sign-up</fullName>
                </value>
                <value>
                    <fullName>Leadership Fundamentals Application</fullName>
                </value>
                <value>
                    <fullName>Intergroup Dialogue Interest</fullName>
                </value>
                <value>
                    <fullName>Request for Overloading/Underloading</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Underload_Reason__c</fullName>
        <label>Describe your underload reasons</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_LOE_Enquiries</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Letter_of_Enrolment</value>
        </filters>
        <label>All LOE Enquiries</label>
    </listViews>
    <listViews>
        <fullName>All_LOR_Enquiries</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Letter_of_Residence</value>
        </filters>
        <label>All LOR Enquiries</label>
    </listViews>
    <listViews>
        <fullName>All_NS_Deferment_Letter_Enquiries</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>012p00000000W63</value>
        </filters>
        <label>All NS Deferment Letter Enquiries</label>
    </listViews>
    <listViews>
        <fullName>All_Transcripts_Enquiries</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>012p00000000W68</value>
        </filters>
        <label>All Transcripts Enquiries</label>
    </listViews>
    <listViews>
        <fullName>All_VR_Note_Enquiries</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Vice_Rector_Note</value>
        </filters>
        <label>All VR Note Enquiries</label>
    </listViews>
    <listViews>
        <fullName>CIPE_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>CIPE Queue</label>
        <queue>CIPE_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dean_of_Students_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Dean of Students Queue</label>
        <queue>Dean_of_Students_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Office_of_Financial_Aid_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Office of Financial Aid Queue</label>
        <queue>Office_of_Financial_Aid_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RC_Exec_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>RC Exec Queue</label>
        <queue>RC_Exec_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Registry_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Registry Queues</label>
        <queue>Registry_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Residential_College_Offices_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Residential College Offices Queue</label>
        <queue>Residential_College_Offices_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sample_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Sample Cases</value>
        </filters>
        <label>Sample Cases</label>
    </listViews>
    <recordTypes>
        <fullName>Capstone_Module</fullName>
        <active>true</active>
        <businessProcess>Capstone Module</businessProcess>
        <label>Capstone Module</label>
    </recordTypes>
    <recordTypes>
        <fullName>Change_of_Major</fullName>
        <active>true</active>
        <businessProcess>Change of Major</businessProcess>
        <label>Change of Major</label>
    </recordTypes>
    <recordTypes>
        <fullName>Five_Year_Programme_with_Lee_Kuan_Yew_School_of_Public_Policy</fullName>
        <active>true</active>
        <businessProcess>Concurrent Degree Programme</businessProcess>
        <label>Five Year Programme with Lee Kuan Yew School of Public Policy</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Enquiry</fullName>
        <active>true</active>
        <businessProcess>General Enquiry</businessProcess>
        <label>General Enquiry</label>
    </recordTypes>
    <recordTypes>
        <fullName>IRR_Module</fullName>
        <active>true</active>
        <businessProcess>IRR Module</businessProcess>
        <label>IRR Module</label>
    </recordTypes>
    <recordTypes>
        <fullName>Intergroup_Dialogue_Interest</fullName>
        <active>true</active>
        <businessProcess>Intergroup Dialogue Interest</businessProcess>
        <label>Intergroup Dialogue Interest</label>
    </recordTypes>
    <recordTypes>
        <fullName>Leadership</fullName>
        <active>false</active>
        <businessProcess>Leadership</businessProcess>
        <label>Leadership</label>
    </recordTypes>
    <recordTypes>
        <fullName>Leadership_Certificate_Sign_up</fullName>
        <active>true</active>
        <businessProcess>Leadership Certificate Sign-up</businessProcess>
        <label>Leadership Certificate Sign-up</label>
    </recordTypes>
    <recordTypes>
        <fullName>Leadership_Ethics_Application</fullName>
        <active>true</active>
        <businessProcess>Leadership Ethics Application</businessProcess>
        <label>Leadership Ethics Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Leadership_Fundamentals_Application</fullName>
        <active>true</active>
        <businessProcess>Leadership Fundamentals Application</businessProcess>
        <label>Leadership Fundamentals Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Letter_of_Enrolment</fullName>
        <active>true</active>
        <businessProcess>Letter of Enrolment</businessProcess>
        <label>Letter of Enrolment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Letter_of_Residence</fullName>
        <active>true</active>
        <businessProcess>Letter of Residence</businessProcess>
        <label>Letter of Residence</label>
    </recordTypes>
    <recordTypes>
        <fullName>NGO_Bootcamp_Application</fullName>
        <active>true</active>
        <businessProcess>NGO Bootcamp Application</businessProcess>
        <label>NGO Bootcamp Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>REC_Form_Submission</fullName>
        <active>true</active>
        <businessProcess>REC Form</businessProcess>
        <label>REC Form Submission</label>
    </recordTypes>
    <recordTypes>
        <fullName>Scholarship</fullName>
        <active>true</active>
        <businessProcess>Scholarship</businessProcess>
        <label>Scholarship</label>
    </recordTypes>
    <recordTypes>
        <fullName>Student_Module</fullName>
        <active>true</active>
        <businessProcess>Student Module</businessProcess>
        <label>Student Module</label>
    </recordTypes>
    <recordTypes>
        <fullName>Student_Overloading_Module</fullName>
        <active>true</active>
        <businessProcess>Student Overloading Module</businessProcess>
        <label>Student Overloading Module</label>
    </recordTypes>
    <recordTypes>
        <fullName>Summer_Independent_Research</fullName>
        <active>true</active>
        <businessProcess>Summer Independent Research</businessProcess>
        <label>Summer Independent Research</label>
    </recordTypes>
    <recordTypes>
        <fullName>Summer_Research</fullName>
        <active>true</active>
        <businessProcess>Summer Research</businessProcess>
        <label>Summer Research</label>
    </recordTypes>
    <recordTypes>
        <fullName>Summer_Science_Research</fullName>
        <active>true</active>
        <businessProcess>Summer Science Research</businessProcess>
        <label>Summer Science Research</label>
    </recordTypes>
    <recordTypes>
        <fullName>Summer_Social_Science_Research</fullName>
        <active>true</active>
        <businessProcess>Summer Social Science Research</businessProcess>
        <label>Summer Social Science Research</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vice_Rector_Note</fullName>
        <active>true</active>
        <businessProcess>Vice Rector Note</businessProcess>
        <label>Vice Rector Note</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>